--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -18,12 +18,12 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/quicksettings_title" >
 
-	<ListPreference
-            android:key="quick_pulldown" 
-            android:title="@string/quick_pulldown_title" 
-            android:entries="@array/quick_pulldown_entries" 
+        <ListPreference
+            android:key="status_bar_quick_qs_pulldown"
+            android:title="@string/status_bar_quick_qs_pulldown"
+            android:entries="@array/quick_pulldown_entries"
             android:entryValues="@array/quick_pulldown_values"
-            android:persistent="false" />
+            android:defaultValue="0" />
 
         <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
