--- a/res/xml/settings_rounded_corners.xml
+++ b/res/xml/settings_rounded_corners.xml
@@ -17,36 +17,28 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
-       android:key="sysui_rounded_fwvals"
-       android:title="@string/corner_fwvals"
-       android:defaultValue="true"
-       android:disableDependentsState="true" />
+            android:key="sysui_rounded_fwvals"
+            android:title="@string/corner_fwvals"
+            android:summary="@string/corner_fwvals_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
 
     <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
-        android:key="sysui_rounded_size"
-        android:title="@string/corner_radius"
-        android:max="60"
-        settings:min="0"
-        settings:units="dp"
-        android:persistent="false"
-        android:dependency="sysui_rounded_fwvals" />
+            android:key="sysui_rounded_size"
+            android:title="@string/corner_radius"
+            android:max="60"
+            settings:min="0"
+            settings:units="dp"
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
 
     <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
-        android:key="sysui_rounded_content_padding"
-        android:title="@string/content_padding"
-        android:max="30"
-        settings:min="0"
-        settings:units="dp"
-        android:persistent="false"
-        android:dependency="sysui_rounded_fwvals" />
-
-    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
-        android:key="sysui_status_bar_padding"
-        android:title="@string/status_bar_padding"
-        android:max="30"
-        settings:min="0"
-        settings:units="dp"
-        android:persistent="false"
-        android:dependency="sysui_rounded_fwvals" />
+            android:key="sysui_rounded_content_padding"
+            android:title="@string/content_padding"
+            android:max="30"
+            settings:min="0"
+            settings:units="dp"
+            android:persistent="false"
+            android:dependency="sysui_rounded_fwvals" />
 
 </PreferenceScreen>
