--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -97,8 +97,19 @@
             android:summary="@string/qs_blur_alpha_summary"
             android:max="100"
             settings:min="1"
+            settings:units="%"
             android:persistent="false"
             android:dependency="qs_blur" />
+
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+           android:key="qs_blur_intensity"
+           android:title="@string/qs_blur_intensity_title"
+           android:summary="@string/qs_blur_intensity_summary"
+           android:max="100"
+           settings:min="1"
+           settings:units="%"
+           android:persistent="false"
+           android:dependency="qs_blur" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_bg_alpha"
