--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -573,6 +573,7 @@
 
     <!-- VoLTE Icon Type -->
     <string-array name="volte_icon_type_entries" translatable="false">
+        <item>@string/volte_icon_miui</item>
         <item>@string/volte_icon_hd</item>
         <item>@string/volte_icon_oos</item>
         <item>@string/volte_icon_volte</item>
@@ -580,6 +581,7 @@
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
+        <item>4</item>
         <item>3</item>
         <item>2</item>
         <item>1</item>
