--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -85,31 +85,12 @@
             android:summary="@string/status_bar_custom_header_summary"
             android:defaultValue="false" />
 
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
             android:key="qs_blur"
+            android:fragment="com.dirtyunicorns.tweaks.fragments.QsBlur"
             android:title="@string/blur_quicksettings"
             android:summary="@string/blur_quicksettings_subtitle"
-            android:defaultValue="true" />
-
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
-            android:key="qs_blur_alpha"
-            android:title="@string/qs_blur_alpha_title"
-            android:summary="@string/qs_blur_alpha_summary"
-            android:max="100"
-            settings:min="1"
-            settings:units="%"
-            android:persistent="false"
-            android:dependency="qs_blur" />
-
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
-           android:key="qs_blur_intensity"
-           android:title="@string/qs_blur_intensity_title"
-           android:summary="@string/qs_blur_intensity_summary"
-           android:max="100"
-           settings:min="1"
-           settings:units="%"
-           android:persistent="false"
-           android:dependency="qs_blur" />
+            android:defaultValue="false" />
 
         <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_bg_alpha"
