--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -879,4 +879,14 @@
         <item>6</item>
         <item>7</item>
     </string-array>
+
+    <!-- Text Clock Alignment -->
+    <string-array name="text_clock_entries">
+        <item>@string/text_clock_left</item>
+        <item>@string/text_clock_center</item>
+    </string-array>
+    <string-array name="text_clock_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
