--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -24,6 +24,16 @@
         android:summary="@string/navigation_bar_summary" />
 
     <Preference
+        android:key="layout_settings"
+        android:title="@string/navigation_bar_layout_title"
+        android:summary="@string/navigation_bar_layout_summary"
+        android:dependency="force_show_navbar">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.NavbarActivity" />
+    </Preference>
+
+    <Preference
         android:key="gesture_settings"
         android:title="@string/aosp_gesture_preference"
         android:summary="@string/aosp_gesture_summary"
