--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -85,6 +85,12 @@
         android:key="qs_theme_category"
         android:title="@string/qs_theme_category">
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_panel_bg_use_new_tint"
+            android:title="@string/qs_bg_use_new_tint"
+            android:summary="@string/qs_bg_use_new_tint_summary"
+            android:defaultValue="false" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingMasterSwitchPreference
             android:key="status_bar_custom_header"
             android:fragment="com.dirtyunicorns.tweaks.fragments.QsHeader"
