DUTweaks: Navbar: Arrow keys while typing resurrection
Change-Id: I123c6a7652c2ac4cab3ca722d3be790baed92823

--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -33,6 +33,13 @@
             android:targetClass="com.android.systemui.tuner.NavbarActivity" />
     </Preference>
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="navigation_bar_menu_arrow_keys"
+        android:title="@string/navigation_bar_arrow_keys_title"
+        android:summary="@string/navigation_bar_arrow_keys_summary"
+        android:dependency="force_show_navbar"
+        android:defaultValue="false" />
+
     <Preference
         android:key="gesture_settings"
         android:title="@string/aosp_gesture_preference"
