--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -40,6 +40,12 @@
         android:dependency="force_show_navbar"
         android:defaultValue="false" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="swap_navigation_keys"
+        android:title="@string/hw_keys_swap_title"
+        android:summary="@string/hw_keys_swap_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="gesture_settings"
         android:title="@string/aosp_gesture_preference"
