--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1084,6 +1084,8 @@
         <item>@string/fod_recog_animation_pureview_halo_ring</item>
         <item>@string/fod_recog_animation_pureview_molecular</item>
         <item>@string/fod_recog_animation_bluefirework</item>
+        <item>@string/fod_recog_animation_coloros7_1</item>
+        <item>@string/fod_recog_animation_coloros7_2</item>
     </string-array>
 
     <string-array name="fod_recog_animation_values" translatable="false">
@@ -1103,5 +1105,7 @@
         <item>13</item>
         <item>14</item>
         <item>15</item>
+        <item>16</item>
+        <item>17</item>
     </string-array>
 </resources>
