--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -997,6 +997,18 @@
         <item>1</item>
     </string-array>
 
+    <!-- Ambient light color -->
+    <string-array name="pulse_ambient_light_color_mode_entries">
+        <item>@string/pulse_ambient_light_color_mode_wall</item>
+        <item>@string/pulse_ambient_light_color_mode_accent</item>
+        <item>@string/pulse_ambient_light_color_mode_custom</item>
+    </string-array>
+    <string-array name="pulse_ambient_light_color_mode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Display cutout options -->
     <string-array name="display_cutout_style_entries" translatable="false">
         <item>@string/display_cutout_style_normal</item>
