--- a/res/xml/pulse_notification_lights.xml
+++ b/res/xml/pulse_notification_lights.xml
@@ -24,6 +24,13 @@
             android:layout="@layout/ambient_light"
             android:selectable="false"/>
 
+        <ListPreference
+            android:key="pulse_ambient_light_color_mode"
+            android:title="@string/pulse_ambient_light_color_mode_title"
+            android:entries="@array/pulse_ambient_light_color_mode_entries"
+            android:entryValues="@array/pulse_ambient_light_color_mode_values"
+            android:defaultValue="1" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="pulse_ambient_light_layout"
             android:title="@string/pulse_ambient_light_layout_title"
@@ -50,12 +57,6 @@
             settings:min="0"
             settings:interval="1"
             settings:units="sec" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="pulse_ambient_auto_color"
-            android:title="@string/pulse_ambient_auto_color_title"
-            android:summary="@string/pulse_ambient_auto_color_summary"
-            android:defaultValue="false" />
 
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
             android:key="pulse_ambient_light_color"
