DUTweaks: Navbar: Custom button light [2/2]
*DU Edits*
- Adapted to what we already have
- Small UX changes

Change-Id: I0994632de87578368aaef5ce5f615f2001526c32

--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -53,6 +53,13 @@
         android:summary="@string/hw_keys_swap_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="button_brightness"
+        android:title="@string/button_backlight_title"
+        android:summary="@string/button_backlight_summary"
+        android:persistent="false"
+        android:fragment="com.dirtyunicorns.tweaks.fragments.ButtonBrightness" />
+
     <PreferenceCategory
         android:key="back_key"
         android:title="@string/back_key_title">
