--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -769,6 +769,7 @@
         <item>@string/action_power_menu</item>
         <item>@string/action_screenshot</item>
         <item>@string/action_qs_panel</item>
+        <item>@string/action_app_action</item>
         <item>@string/action_ringer_modes</item>
     </string-array>
 
@@ -790,5 +791,6 @@
         <item>14</item>
         <item>15</item>
         <item>16</item>
+        <item>17</item>
     </string-array>
 </resources>
