--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -46,6 +46,17 @@
         <item>2</item>
     </string-array>
 
+    <!-- Network Traffic Layout -->
+    <string-array name="network_traffic_layout_entries" translatable="false">
+        <item>@string/network_traffic_layout_h</item>
+        <item>@string/network_traffic_layout_v</item>
+    </string-array>
+
+    <string-array name="network_traffic_layout_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!--- Volume key cursor control -->
     <string-array name="volume_key_cursor_control_entries">
         <item>@string/volume_key_cursor_control_off</item>
