--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -27,6 +27,14 @@
         android:entryValues="@array/network_traffic_location_values"
         android:persistent="false" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+        android:key="network_traffic_layout"
+        android:title="@string/network_traffic_layout"
+        android:entries="@array/network_traffic_layout_entries"
+        android:entryValues="@array/network_traffic_layout_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+
     <ListPreference
         android:key="network_traffic_type"
         android:title="@string/network_traffic_type"
