--- a/res/xml/pulse_notification_lights.xml
+++ b/res/xml/pulse_notification_lights.xml
@@ -24,6 +24,13 @@
             android:layout="@layout/ambient_light"
             android:selectable="false"/>
 
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="pulse_ambient_light_layout"
+            android:title="@string/pulse_ambient_light_layout_title"
+            android:entries="@array/pulse_ambient_light_layout_entries"
+            android:entryValues="@array/pulse_ambient_light_layout_values"
+            android:defaultValue="0" />
+
         <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
             android:key="pulse_ambient_light_duration"
             android:title="@string/pulse_ambient_light_duration_title"
