--- a/res/xml/pulse_notification_lights.xml
+++ b/res/xml/pulse_notification_lights.xml
@@ -24,6 +24,12 @@
             android:layout="@layout/ambient_light"
             android:selectable="false"/>
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="ambient_light_pulse_for_all"
+            android:title="@string/pulse_ambient_light_show_always_title"
+            android:summary="@string/pulse_ambient_light_show_always_summary"
+            android:defaultValue="false" />
+
         <ListPreference
             android:key="ambient_light_color"
             android:title="@string/pulse_ambient_light_color_mode_title"
