--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -787,6 +787,7 @@
         <item>@string/action_qs_panel</item>
         <item>@string/action_app_action</item>
         <item>@string/action_ringer_modes</item>
+        <item>@string/kill_app</item>
     </string-array>
 
     <string-array name="action_values" translatable="false">
@@ -808,6 +809,7 @@
         <item>15</item>
         <item>16</item>
         <item>17</item>
+        <item>18</item>
     </string-array>
 
     <!-- Power menu Animations  -->
