--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -52,15 +52,24 @@
         android:dependency="force_show_navbar"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="gesture_pill_switch"
+        android:title="@string/navbar_gesture_pill_toggle_title"
+        android:summary="@string/navbar_gesture_pill_toggle_summary"
+        android:dependency="force_show_navbar"
+        android:defaultValue="false" />
+
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="back_swipe_extended"
         android:title="@string/back_swipe_extended_title"
         android:summary="@string/back_swipe_extended_summary"
+        android:dependency="force_show_navbar"
         android:defaultValue="false" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingListPreference
         android:key="long_back_swipe_timeout"
         android:title="@string/long_back_swipe_timeout_title"
+        android:dependency="force_show_navbar"
         android:entries="@array/long_back_swipe_timeout_entries"
         android:entryValues="@array/long_back_swipe_timeout_values"
         android:defaultValue="2000" />
@@ -74,12 +83,14 @@
             android:title="@string/left_swipe_actions_title"
             android:entries="@array/gestures_actions_entries"
             android:entryValues="@array/gestures_actions_values"
+            android:dependency="force_show_navbar"
             android:defaultValue="0" />
 
         <Preference
             android:key="left_swipe_app_action"
             android:title="@string/left_swipe_app_action_title"
-            android:summary="@string/app_picker_dialog_title">
+            android:summary="@string/app_picker_dialog_title"
+            android:dependency="force_show_navbar">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.LeftBackSwipeCustomApp" />
@@ -96,12 +107,14 @@
             android:title="@string/right_swipe_actions_title"
             android:entries="@array/gestures_actions_entries"
             android:entryValues="@array/gestures_actions_values"
+            android:dependency="force_show_navbar"
             android:defaultValue="0" />
 
         <Preference
             android:key="right_swipe_app_action"
             android:title="@string/right_swipe_app_action_title"
-            android:summary="@string/app_picker_dialog_title">
+            android:summary="@string/app_picker_dialog_title"
+            android:dependency="force_show_navbar">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.RightBackSwipeCustomApp" />
