--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -36,6 +36,12 @@
         android:dependency="force_show_navbar"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="gesture_pill_switch"
+        android:title="@string/navbar_gesture_pill_toggle_title"
+        android:summary="@string/navbar_gesture_pill_toggle_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="gesture_system_navigation"
         android:title="@string/system_navigation_title"
@@ -52,34 +58,6 @@
             android:targetPackage="com.android.systemui"
             android:targetClass="com.android.systemui.tuner.NavbarActivity" />
     </Preference>
-
-    <PreferenceCategory
-        android:key="gesture_category"
-        android:title="@string/navbar_gesture_category" >
-
-        <SwitchPreference
-            android:key="gesture_pill_switch"
-            android:title="@string/navbar_gesture_pill_toggle_title"
-            android:summary="@string/navbar_gesture_pill_toggle_summary"
-            android:dependency="force_show_navbar"
-            android:defaultValue="false" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
-            android:key="long_back_swipe_timeout"
-            android:title="@string/long_back_swipe_timeout_title"
-            android:dependency="force_show_navbar"
-            android:entries="@array/long_back_swipe_timeout_entries"
-            android:entryValues="@array/long_back_swipe_timeout_values"
-            android:defaultValue="2000" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="back_swipe_extended"
-            android:title="@string/back_swipe_extended_title"
-            android:summary="@string/back_swipe_extended_summary"
-            android:dependency="force_show_navbar"
-            android:defaultValue="false" />
-
-    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="hw_keys"
@@ -106,66 +84,66 @@
             android:fragment="com.dirtyunicorns.tweaks.fragments.ButtonBrightness" />
     </PreferenceCategory>
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="back_swipe_extended"
-        android:title="@string/back_swipe_extended_title"
-        android:summary="@string/back_swipe_extended_summary"
-        android:dependency="force_show_navbar"
-        android:defaultValue="false" />
-
-    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
-        android:key="long_back_swipe_timeout"
-        android:title="@string/long_back_swipe_timeout_title"
-        android:dependency="force_show_navbar"
-        android:entries="@array/long_back_swipe_timeout_entries"
-        android:entryValues="@array/long_back_swipe_timeout_values"
-        android:defaultValue="2000" />
-
     <PreferenceCategory
-        android:key="left_swipe"
-        android:title="@string/left_swipe_key_title">
+        android:key="back_gesture"
+        android:title="@string/back_gesture_title">
+
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="show_back_arrow_gesture"
+            android:title="@string/back_arrow_gesture_title"
+            android:summary="@string/back_arrow_gesture_summary"
+            android:defaultValue="true" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="back_swipe_extended"
+            android:title="@string/back_swipe_extended_title"
+            android:summary="@string/back_swipe_extended_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="long_back_swipe_timeout"
+            android:title="@string/long_back_swipe_timeout_title"
+            android:entries="@array/long_back_swipe_timeout_entries"
+            android:entryValues="@array/long_back_swipe_timeout_values"
+            android:defaultValue="2000" />
 
         <ListPreference
             android:key="left_swipe_actions"
             android:title="@string/left_swipe_actions_title"
             android:entries="@array/gestures_actions_entries"
             android:entryValues="@array/gestures_actions_values"
-            android:dependency="force_show_navbar"
             android:defaultValue="0" />
 
         <Preference
             android:key="left_swipe_app_action"
             android:title="@string/left_swipe_app_action_title"
-            android:summary="@string/app_picker_dialog_title"
-            android:dependency="force_show_navbar">
+            android:summary="@string/app_picker_dialog_title">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.LeftBackSwipeCustomApp" />
         </Preference>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="right_swipe"
-        android:title="@string/right_swipe_key_title">
 
         <ListPreference
             android:key="right_swipe_actions"
             android:title="@string/right_swipe_actions_title"
             android:entries="@array/gestures_actions_entries"
             android:entryValues="@array/gestures_actions_values"
-            android:dependency="force_show_navbar"
             android:defaultValue="0" />
 
         <Preference
             android:key="right_swipe_app_action"
             android:title="@string/right_swipe_app_action_title"
-            android:summary="@string/app_picker_dialog_title"
-            android:dependency="force_show_navbar">
+            android:summary="@string/app_picker_dialog_title">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.RightBackSwipeCustomApp" />
         </Preference>
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="back_gesture_haptic"
+            android:title="@string/back_gesture_haptic_title"
+            android:summary="@string/back_gesture_haptic_summary"
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
