Lair: Add back hardwarekey disable *https://github.com/Havoc-OS/android_packages_apps_ConfigCenter/commit/2152f114d7164333d567b8eff47362fa82fdf183#diff-6df6ff53d14af580e9c62204a2cf97d2R89

--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -31,6 +31,13 @@
         android:summary="@string/gaming_mode_notifications_feedback_summary"
         android:defaultValue="true" />
 
+    <!-- Hardware keys -->
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="gaming_mode_hw_keys_toggle"
+        android:title="@string/gaming_mode_hardware_keys_title"
+        android:summary="@string/gaming_mode_hardware_keys_summary"
+        android:defaultValue="false" />
+
     <!-- Manual brightness -->
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_manual_brightness_toggle"
