--- a/res/xml/button_brightness.xml
+++ b/res/xml/button_brightness.xml
@@ -37,6 +37,7 @@
         android:title="@string/button_manual_brightness"
         android:max="255"
         settings:min="1"
+        android:defaultValue="128"
         android:persistent="false"
         android:dependency="custom_button_use_screen_brightness" />
 
@@ -45,6 +46,7 @@
         android:title="@string/button_timeout_title"
         android:max="30"
         settings:min="0"
+        android:defaultValue="0"
         android:persistent="false"
         android:dependency="button_backlight_enable" />
 
