--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -26,7 +26,33 @@
     <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
         android:key="sysui_nav_bar_inverse"
         android:title="@string/navbar_invert_layout_title"
-        android:defaultValue="false" />
+        android:defaultValue="false" 
+        android:dependency="force_show_navbar"/>
+
+    <PreferenceCategory
+        android:key="hw_keys"
+        android:title="@string/hardware_keys_title" >
+
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="hardware_keys_enable"
+            android:title="@string/hardware_keys_disable_title"
+            android:summary="@string/hardware_keys_disable_summary"
+            android:defaultValue="true" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="swap_navigation_keys"
+            android:title="@string/hw_keys_swap_title"
+            android:summary="@string/hw_keys_swap_summary"
+	  android:defaultValue="false"
+            android:dependency="hardware_keys_enable" />
+
+        <Preference
+            android:key="button_backlight"
+            android:title="@string/button_backlight_title"
+            android:summary="@string/button_backlight_summary"
+            android:persistent="false"
+            android:fragment="com.dirtyunicorns.tweaks.fragments.ButtonBrightness" />
+    </PreferenceCategory>
 
     <Preference
         android:key="gesture_system_navigation"
@@ -44,19 +70,6 @@
             android:targetPackage="com.android.systemui"
             android:targetClass="com.android.systemui.tuner.NavbarActivity" />
     </Preference>
-
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="swap_navigation_keys"
-        android:title="@string/hw_keys_swap_title"
-        android:summary="@string/hw_keys_swap_summary"
-        android:defaultValue="false" />
-
-    <Preference
-        android:key="button_brightness"
-        android:title="@string/button_backlight_title"
-        android:summary="@string/button_backlight_summary"
-        android:persistent="false"
-        android:fragment="com.dirtyunicorns.tweaks.fragments.ButtonBrightness" />
 
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
         android:key="navigation_bar_menu_arrow_keys"
