DUTweaks: Fix build [1/2] *after https://github.com/Corvus-ROM/android_vendor_du/commit/6c832680aa1e4fcb43bed78848aff91df2038009

--- a/res/xml/pulse_notification_lights.xml
+++ b/res/xml/pulse_notification_lights.xml
@@ -53,5 +53,5 @@
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
             android:key="pulse_ambient_light_color"
             android:title="@string/pulse_ambient_light_color_title"
-            settings:defaultColorValue="0xFF3980FF" />
+            android:defaultValue="0xFF3980FF" />
 </PreferenceScreen>
