--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -975,6 +975,7 @@
 
     <!-- Gesture navbar handle -->
     <string-array name="gesture_navbar_handle_entries">
+        <item>@string/gesture_navbar_handle_hidden</item>
         <item>@string/gesture_navbar_handle_default</item>
         <item>@string/gesture_navbar_handle_middle</item>
         <item>@string/gesture_navbar_handle_large</item>
@@ -984,6 +985,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <!-- Smart pulldown -->
