--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -17,6 +17,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.dirtyunicorns.tweaks.preferences.CategoryPreference
+        android:key="corvus_parts_category"
+        android:icon="@drawable/dt_corvus_parts"
+        android:title="@string/corvus_parts_title"
+        android:summary="@string/corvus_parts_summary" >
+        <intent android:action="com.android.settings.action.EXTRA_SETTINGS"
+            android:targetPackage="com.corvus.parts"
+            android:targetClass="com.corvus.parts.DeviceSettingsActivity" />
+    </com.dirtyunicorns.tweaks.preferences.CategoryPreference>
+
+    <com.dirtyunicorns.tweaks.preferences.CategoryPreference
         android:key="notifications_category"
         android:icon="@drawable/dt_notifications"
         android:title="@string/notifications_title"
