--- a/res/layout/teamdialog.xml
+++ b/res/layout/teamdialog.xml
@@ -128,6 +128,40 @@
 
                     </FrameLayout>
 
+                    <FrameLayout
+                        android:id="@+id/ritzz"
+                        android:layout_width="80dp"
+                        android:layout_height="75dp">
+
+                        <RelativeLayout
+                            android:layout_width="80dp"
+                            android:layout_height="75dp">
+
+                            <com.dirtyunicorns.support.helpers.CircularImageView
+                                android:id="@+id/ritzz_image"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginStart="15dp"
+                                android:layout_marginEnd="15dp"
+                                android:src="@drawable/ritzz"
+                                app:civ_border_color="@color/team_dialog_circle_border_color"
+                                app:civ_border="true"
+                                app:civ_border_width="3dp" />
+
+                            <TextView
+                                android:id="@+id/ritzz_text"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ritzz"
+                                android:textStyle="bold"
+                                android:layout_below="@+id/ritzz_image"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="3dp" />
+
+                        </RelativeLayout>
+
+                    </FrameLayout>
+
                 </com.dirtyunicorns.support.helpers.RowLayout>
 
             </LinearLayout>
