DUTweaks: Update layout & changes all drawables

--- a/res/drawable/dt_traffic.xml
+++ b/res/drawable/dt_traffic.xml
@@ -1,11 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="80dp"
-    android:width="80dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
+    android:height="30dp" 
+    android:width="30dp"
+    android:viewportHeight="64"
+    android:viewportWidth="64"
     android:tint="@color/dirty_tweaks_category_icon_tint">
 
-    <path
-        android:fillColor="#fff"
-        android:pathData="M12,9A2,2 0 0,1 10,7C10,5.89 10.9,5 12,5C13.11,5 14,5.89 14,7A2,2 0 0,1 12,9M12,14A2,2 0 0,1 10,12C10,10.89 10.9,10 12,10C13.11,10 14,10.89 14,12A2,2 0 0,1 12,14M12,19A2,2 0 0,1 10,17C10,15.89 10.9,15 12,15C13.11,15 14,15.89 14,17A2,2 0 0,1 12,19M20,10H17V8.86C18.72,8.41 20,6.86 20,5H17V4A1,1 0 0,0 16,3H8A1,1 0 0,0 7,4V5H4C4,6.86 5.28,8.41 7,8.86V10H4C4,11.86 5.28,13.41 7,13.86V15H4C4,16.86 5.28,18.41 7,18.86V20A1,1 0 0,0 8,21H16A1,1 0 0,0 17,20V18.86C18.72,18.41 20,16.86 20,15H17V13.86C18.72,13.41 20,11.86 20,10Z" />
+    <path android:fillColor="#FF000000" android:pathData="M32,6a7,7 0,1 0,7 7A7.008,7.008 0,0 0,32 6ZM32,18a5,5 0,1 1,5 -5A5.006,5.006 0,0 1,32 18Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M32,9a1,1 0,0 0,0 2,2 2,0 0,1 2,2 1,1 0,0 0,2 0A4,4 0,0 0,32 9Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M32,22a7,7 0,1 0,7 7A7.008,7.008 0,0 0,32 22ZM32,34a5,5 0,1 1,5 -5A5.006,5.006 0,0 1,32 34Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M32,25a1,1 0,0 0,0 2,2 2,0 0,1 2,2 1,1 0,0 0,2 0A4,4 0,0 0,32 25Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M32,38a7,7 0,1 0,7 7A7.008,7.008 0,0 0,32 38ZM32,50a5,5 0,1 1,5 -5A5.006,5.006 0,0 1,32 50Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M32,41a1,1 0,0 0,0 2,2 2,0 0,1 2,2 1,1 0,0 0,2 0A4,4 0,0 0,32 41Z"/>
+    <path android:fillColor="#FF000000" android:pathData="M47,33a5.006,5.006 0,0 1,5 -5,3 3,0 0,0 0,-6L43,22v-0.1A5.009,5.009 0,0 0,47 17a5.006,5.006 0,0 1,5 -5,3 3,0 0,0 0,-6L43,6L43,5a3,3 0,0 0,-3 -3L24,2a3,3 0,0 0,-3 3L21,6L12,6a3,3 0,0 0,0 6,5.006 5.006,0 0,1 5,5 5.009,5.009 0,0 0,4 4.9L21,22L12,22a3,3 0,0 0,0 6,5.006 5.006,0 0,1 5,5 5.009,5.009 0,0 0,4 4.9L21,38L12,38a3,3 0,0 0,0 6,5.006 5.006,0 0,1 5,5 5,5 0,0 0,4.158 4.915A2.993,2.993 0,0 0,24 56h3v5a1,1 0,0 0,1 1h8a1,1 0,0 0,1 -1L37,56h3a2.993,2.993 0,0 0,2.842 -2.085A5,5 0,0 0,47 49a5.006,5.006 0,0 1,5 -5,3 3,0 0,0 0,-6L43,38v-0.1A5.009,5.009 0,0 0,47 33ZM52,24a1,1 0,0 1,0 2,7.008 7.008,0 0,0 -7,7 3.006,3.006 0,0 1,-2 2.829L43,24ZM52,8a1,1 0,0 1,0 2,7.008 7.008,0 0,0 -7,7 3.006,3.006 0,0 1,-2 2.829L43,8ZM19,17a7.008,7.008 0,0 0,-7 -7,1 1,0 0,1 0,-2h9L21,19.829A3.006,3.006 0,0 1,19 17ZM19,33a7.008,7.008 0,0 0,-7 -7,1 1,0 0,1 0,-2h9L21,35.829A3.006,3.006 0,0 1,19 33ZM19,49a7.008,7.008 0,0 0,-7 -7,1 1,0 0,1 0,-2h9L21,51.829A3.006,3.006 0,0 1,19 49ZM35,60L29,60L29,56h6ZM40,54L24,54a1,1 0,0 1,-1 -1L23,5a1,1 0,0 1,1 -1L40,4a1,1 0,0 1,1 1L41,53A1,1 0,0 1,40 54ZM52,40a1,1 0,0 1,0 2,7.008 7.008,0 0,0 -7,7 3.006,3.006 0,0 1,-2 2.829L43,40Z"/>
 </vector>
