--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <color name="fod_item_background_stroke_color">#555555</color>
+    <color name="cardview_bg">@*android:color/primary_device_default_settings</color>
 </resources>
