--- a/res/drawable/dt_ticker.xml
+++ b/res/drawable/dt_ticker.xml
@@ -1,10 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="80dp"
-    android:width="80dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
+    android:height="30dp" 
+    android:width="30dp"
+    android:viewportHeight="512"
+    android:viewportWidth="512"
     android:tint="@color/dirty_tweaks_category_icon_tint">
 
-    <path 
-        android:fillColor="#fff"         android:pathData="M9.25,5L12.5,1.75L15.75,5H9.25M15.75,19L12.5,22.25L9.25,19H15.75M8.89,14.3H6L5.28,17H2.91L6,7H9L12.13,17H9.67L8.89,14.3M6.33,12.68H8.56L7.93,10.56L7.67,9.59L7.42,8.63H7.39L7.17,9.6L6.93,10.58L6.33,12.68M13.05,17V15.74L17.8,8.97V8.91H13.5V7H20.73V8.34L16.09,15V15.08H20.8V17H13.05Z" />
-</vector> 
+    <path android:fillColor="#000000"
+        android:pathData="M392.6,2.8c-0.8,1.6 -2.2,3.4 -3,4.1 -0.9,0.8 -1.6,2.2 -1.6,3.3 0,1 -0.7,2.1 -1.5,2.4 -1.3,0.5 -1.5,6 -1.5,41 0,35.2 0.2,40.4 1.5,40.4 0.8,-0 1.5,-0.7 1.5,-1.5 0,-0.8 0.7,-1.5 1.5,-1.5 0.9,-0 2,-1.1 2.5,-2.5 0.5,-1.4 1.6,-2.5 2.2,-2.4 2.7,0.3 3.8,-0.2 3.8,-1.7 0,-1 0.6,-1.4 1.5,-1 0.9,0.3 1.5,-0 1.5,-1 0,-1.2 0.6,-1.5 2.5,-1 1.7,0.4 2.4,0.3 2.3,-0.6 -0.2,-0.8 0.9,-1.1 3.5,-0.9 2.1,0.1 3.7,-0.2 3.7,-0.8 0,-0.6 0.9,-1.1 2,-1.1 2,-0 2,-0.7 2,-34.1 0,-19.5 -0.4,-33.8 -0.9,-33.5 -1.2,0.8 -2.8,-1.4 -3.3,-4.4 -0.2,-1.9 -0.9,-2.5 -2.5,-2.4 -1.6,-0 -2.3,-0.5 -2.3,-1.8 0,-1 -0.7,-1.8 -1.5,-1.8 -0.8,-0 -1.5,0.4 -1.5,0.9 0,1 -5.7,0.8 -6.7,-0.3 -1.5,-1.5 -4.4,-0.4 -5.7,2.2z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M9.8,67.8c-1,0.2 -1.8,0.8 -1.8,1.4 0,0.5 -1.1,1.9 -2.5,3 -5.4,4.2 -5.5,5 -5.5,41.3 0,21.7 0.4,33.5 1,33.5 0.6,-0 1,1.3 1,2.8 0,3.6 3.4,6.8 6.6,6.4 1.6,-0.2 2.4,0.1 2.4,1.2 0,1.4 5.3,1.6 50.5,1.6l50.5,-0 -0.2,140.2 -0.3,140.3 3.2,2.8 3.2,2.9 37.8,-0.1 37.7,-0 2,-2.8c1.2,-1.5 2.4,-2.9 2.8,-3.1 0.5,-0.2 0.8,-1.2 0.8,-2.3 0,-1.1 0.7,-2.2 1.5,-2.5 1.3,-0.5 1.5,-16.8 1.5,-138l0,-137.4 49.5,-0c44.3,-0 49.5,-0.2 49.5,-1.6 0,-1.1 0.6,-1.4 2,-0.9 1.3,0.4 2,0.2 2,-0.7 0,-0.7 1.4,-2.4 3.1,-3.8l3.1,-2.6 0.1,-36.2c0.2,-25.7 -0.1,-36.3 -0.9,-36.6 -0.6,-0.2 -1.4,-1.9 -1.8,-3.6 -0.5,-2.7 -1,-3.1 -2.7,-2.7 -1.1,0.3 -2.2,-0 -2.5,-0.6 -0.3,-0.9 -35.2,-1.1 -145,-0.9 -79.6,0.1 -145.2,-0.2 -145.8,-0.6 -0.6,-0.5 -1.9,-0.7 -2.8,-0.4z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M416.3,108.2c0.1,0.8 -0.8,1.3 -2.3,1.2 -2.9,-0.1 -5,1.7 -5,4.5 0,1.1 -0.9,2.2 -2,2.6 -1.3,0.4 -2,1.5 -2,3 0,1.5 -0.7,2.6 -2,3 -1.3,0.4 -2,1.5 -2,3 0,1.5 -0.7,2.6 -2,3 -1.1,0.3 -2,1.5 -2,2.5 0,1 -0.9,2.5 -2,3.3 -1.2,0.8 -2,1.9 -1.8,2.5 0.2,0.5 -0.7,1.9 -2,3 -1.2,1.1 -2.2,2.4 -2,2.8 0.4,1.5 -2.3,8.4 -3.3,8.4 -1.5,-0 -1,3 0.7,4.7 0.9,0.9 1.4,2.6 1.1,3.9 -0.3,1.6 0.2,2.5 1.9,3.2 1.2,0.6 2.5,2 2.9,3.2 0.4,1.2 1.6,3.1 2.6,4.1 1,1 1.9,2.6 1.9,3.4 0,0.8 0.5,1.5 1.1,1.5 0.5,-0 1.5,1.3 2,2.9 0.6,1.6 1.7,3.2 2.5,3.5 0.8,0.3 1.4,1.4 1.4,2.5 0,1.1 0.9,2.5 2,3.1 1.1,0.6 2,1.9 2,3 0,2.7 5,7.6 6.1,5.9 0.6,-1.1 0.9,-1.1 1.4,0.1 0.4,1.3 6.6,1.5 44.7,1.3l44.2,-0.2 2,-2.8c1.1,-1.5 2.3,-3 2.6,-3.3 2.7,-2.6 3,-6.1 3,-38.4 0,-21.3 -0.4,-33.7 -1,-34.1 -0.5,-0.3 -1,-1.6 -1,-2.9 0,-2.9 -4.1,-6.9 -6.3,-6 -1.2,0.4 -1.7,0.1 -1.7,-1 0,-1.4 -4.2,-1.6 -43,-1.6 -33.9,-0 -42.9,0.3 -42.7,1.2z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M385,355.4c0,127.1 0.2,144.5 1.5,145.6 0.8,0.7 1.5,1.9 1.5,2.7 0,0.8 1.2,3 2.8,4.9 2.6,3.3 2.9,3.4 10,3.4 3.9,-0 7.2,-0.4 7.2,-0.8 0,-0.5 1,-0.8 2.3,-0.8 1.6,0.1 2.3,-0.5 2.5,-2.4 0.5,-3 2.1,-5.2 3.3,-4.4 0.5,0.3 0.9,-57.5 0.9,-137.5l0,-138.1 -3,-0c-2.1,-0 -3,-0.5 -3,-1.6 0,-1.2 -0.7,-1.4 -3,-0.9 -2.3,0.5 -3,0.3 -3,-0.9 0,-1.5 -1.9,-2.2 -4.5,-1.6 -0.5,0.1 -0.7,-0.2 -0.3,-0.6 0.5,-0.4 -0.2,-1.2 -1.5,-1.9 -1.5,-0.8 -2.4,-0.8 -2.9,-0.1 -0.4,0.6 -1.1,-0.1 -1.7,-1.5 -0.9,-2.6 -6.5,-7.9 -8.2,-7.9 -0.5,-0 -0.9,56.8 -0.9,144.4z" android:strokeColor="#00000000"/>
+</vector>
