--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,10 +17,10 @@
 <resources>
 
     <!-- Dirty Tweaks -->
-    <color name="preference_background_color">@*android:color/accent_device_default_light</color>
     <color name="team_dialog_circle_border_color">@*android:color/accent_device_default_light</color>
-    <color name="dirty_tweaks_category_icon_tint">@*android:color/notification_material_background_color</color>
+    <color name="dirty_tweaks_category_icon_tint">@*android:color/accent_device_default_light</color>
     <color name="homepage_du_background">#D32F2F</color>
+    <color name="cardview_bg">@*android:color/background_device_default_light</color>
 
     <!-- Bottom navigation bar -->
     <color name="material_grey500">#ff9e9e9e</color>
