--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -20,6 +20,14 @@
     <dimen name="design_bottom_navigation_text_size">10dp</dimen>
     <dimen name="design_bottom_navigation_active_text_size">11dp</dimen>
 
+    <!-- Cardview Preference -->
+    <dimen name="card_elevation">2dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
+    <dimen name="card_margin_top">4dp</dimen>
+    <dimen name="card_margin_bottom">4dp</dimen>
+    <dimen name="card_margin_right">8dp</dimen>
+    <dimen name="card_margin_left">8dp</dimen>
+
     <!-- FOD icon picker -->
     <dimen name="fod_picker_item_margin">10dp</dimen>
     <dimen name="fod_picker_item_size">100dp</dimen>
