--- a/res/xml/clock_options.xml
+++ b/res/xml/clock_options.xml
@@ -23,32 +23,6 @@
             android:title="@string/status_bar_clock_show"
             android:defaultValue="true" />
 
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="status_bar_clock_auto_hide"
-            android:title="@string/status_bar_clock_auto_hide_title"
-            android:summary="@string/status_bar_clock_auto_hide_summary"
-            android:defaultValue="false" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
-            android:key="status_bar_clock_auto_hide_hduration"
-            android:title="@string/status_bar_clock_auto_hide_hdur_title"
-            android:max="300"
-            settings:min="5"
-            settings:interval="5"
-            settings:units="sec"
-            android:dependency="status_bar_clock_auto_hide"
-            android:defaultValue="60" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
-            android:key="status_bar_clock_auto_hide_sduration"
-            android:title="@string/status_bar_clock_auto_hide_sdur_title"
-            android:max="300"
-            settings:min="5"
-            settings:interval="5"
-            settings:units="sec"
-            android:dependency="status_bar_clock_auto_hide"
-            android:defaultValue="5" />
-
         <ListPreference
             android:key="statusbar_clock_style"
             android:title="@string/status_bar_clock_style_title"
@@ -64,12 +38,6 @@
             android:entries="@array/status_bar_am_pm_entries"
             android:entryValues="@array/status_bar_am_pm_values"
             android:dependency="status_bar_clock" />
-
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-            android:key="status_bar_clock_seconds"
-            android:title="@string/clock_seconds_display"
-            android:dependency="status_bar_clock"
-            android:defaultValue="false" />
 
         <ListPreference
             android:key="clock_date_display"
@@ -93,12 +61,52 @@
             android:entryValues="@array/clock_date_style_values"
             android:dependency="clock_date_display" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_clock_seconds"
+            android:title="@string/clock_seconds_display"
+            android:dependency="status_bar_clock"
+            android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:title="@string/clock_hide_category" >
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_clock_auto_hide"
+            android:title="@string/status_bar_clock_auto_hide_title"
+            android:summary="@string/status_bar_clock_auto_hide_summary"
+            android:defaultValue="false"
+            android:dependency="status_bar_clock" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_clock_auto_hide_hduration"
+            android:title="@string/status_bar_clock_auto_hide_hdur_title"
+            android:max="300"
+            settings:min="5"
+            settings:interval="5"
+            settings:units="sec"
+            android:dependency="status_bar_clock_auto_hide"
+            android:defaultValue="60" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_clock_auto_hide_sduration"
+            android:title="@string/status_bar_clock_auto_hide_sdur_title"
+            android:max="300"
+            settings:min="5"
+            settings:interval="5"
+            settings:units="sec"
+            android:dependency="status_bar_clock_auto_hide"
+            android:defaultValue="5" />
+
         <ListPreference
             android:key="clock_date_format"
             android:title="@string/clock_date_format"
             android:entries="@array/clock_date_format_entries_values"
             android:entryValues="@array/clock_date_format_entries_values"
             android:dependency="clock_date_display" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/clock_style_category" >
 
         <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
             android:key="status_bar_clock_size"
@@ -106,12 +114,14 @@
             android:max="23"
             settings:min="4"
             android:defaultValue="14"
-            settings:units="dp"/>
+            settings:units="dp"
+            android:dependency="status_bar_clock" />
 
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
             android:key="status_bar_clock_color"
             android:title="@string/status_bar_clock_color_title"
-            android:defaultValue="0xffffffff" />
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_clock" />
 
         <ListPreference
             android:key="status_bar_clock_font_style"
@@ -119,6 +129,8 @@
             android:title="@string/status_bar_clock_font_style_title"
             android:entries="@array/lock_clock_fonts_entries"
             android:entryValues="@array/lock_clock_fonts_values"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            android:dependency="status_bar_clock" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
