--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -29,6 +29,58 @@
         android:defaultValue="false" 
         android:dependency="force_show_navbar"/>
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="navigation_bar_menu_arrow_keys"
+        android:title="@string/navigation_bar_arrow_keys_title"
+        android:summary="@string/navigation_bar_arrow_keys_summary"
+        android:dependency="force_show_navbar"
+        android:defaultValue="false" />
+
+    <Preference
+        android:key="gesture_system_navigation"
+        android:title="@string/system_navigation_title"
+        android:dependency="force_show_navbar"
+        android:fragment="com.android.settings.gestures.SystemNavigationGestureSettings"
+        settings:controller="com.android.settings.gestures.SystemNavigationPreferenceController" />
+
+    <Preference
+        android:key="layout_settings"
+        android:title="@string/navigation_bar_layout_title"
+        android:summary="@string/navigation_bar_layout_summary"
+        android:dependency="force_show_navbar">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.tuner.NavbarActivity" />
+    </Preference>
+
+    <PreferenceCategory
+        android:key="gesture_category"
+        android:title="@string/navbar_gesture_category" >
+
+        <ListPreference
+            android:key="navigation_handle_width"
+            android:title="@string/gesture_navbar_handle_title"
+            android:entries="@array/gesture_navbar_handle_entries"
+            android:entryValues="@array/gesture_navbar_handle_values"
+            android:dependency="force_show_navbar" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="long_back_swipe_timeout"
+            android:title="@string/long_back_swipe_timeout_title"
+            android:dependency="force_show_navbar"
+            android:entries="@array/long_back_swipe_timeout_entries"
+            android:entryValues="@array/long_back_swipe_timeout_values"
+            android:defaultValue="2000" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="back_swipe_extended"
+            android:title="@string/back_swipe_extended_title"
+            android:summary="@string/back_swipe_extended_summary"
+            android:dependency="force_show_navbar"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="hw_keys"
         android:title="@string/hardware_keys_title" >
@@ -53,52 +105,6 @@
             android:persistent="false"
             android:fragment="com.dirtyunicorns.tweaks.fragments.ButtonBrightness" />
     </PreferenceCategory>
-
-    <Preference
-        android:key="gesture_system_navigation"
-        android:title="@string/system_navigation_title"
-        android:dependency="force_show_navbar"
-        android:fragment="com.android.settings.gestures.SystemNavigationGestureSettings"
-        settings:controller="com.android.settings.gestures.SystemNavigationPreferenceController" />
-
-    <ListPreference
-        android:key="navigation_handle_width"
-        android:title="@string/gesture_navbar_handle_title"
-        android:entries="@array/gesture_navbar_handle_entries"
-        android:entryValues="@array/gesture_navbar_handle_values"
-        android:dependency="force_show_navbar" />
-
-    <Preference
-        android:key="layout_settings"
-        android:title="@string/navigation_bar_layout_title"
-        android:summary="@string/navigation_bar_layout_summary"
-        android:dependency="force_show_navbar">
-        <intent android:action="android.intent.action.MAIN"
-            android:targetPackage="com.android.systemui"
-            android:targetClass="com.android.systemui.tuner.NavbarActivity" />
-    </Preference>
-
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="navigation_bar_menu_arrow_keys"
-        android:title="@string/navigation_bar_arrow_keys_title"
-        android:summary="@string/navigation_bar_arrow_keys_summary"
-        android:dependency="force_show_navbar"
-        android:defaultValue="false" />
-
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="back_swipe_extended"
-        android:title="@string/back_swipe_extended_title"
-        android:summary="@string/back_swipe_extended_summary"
-        android:dependency="force_show_navbar"
-        android:defaultValue="false" />
-
-    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
-        android:key="long_back_swipe_timeout"
-        android:title="@string/long_back_swipe_timeout_title"
-        android:dependency="force_show_navbar"
-        android:entries="@array/long_back_swipe_timeout_entries"
-        android:entryValues="@array/long_back_swipe_timeout_values"
-        android:defaultValue="2000" />
 
     <PreferenceCategory
         android:key="left_swipe"
