--- a/res/xml/traffic_indicators.xml
+++ b/res/xml/traffic_indicators.xml
@@ -52,16 +52,16 @@
         settings:defaultValue="42"
         settings:units="dp" />
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="network_traffic_arrow"
-        android:title="@string/network_traffic_arrow"
-        android:summary="@string/network_traffic_arrow_summary"
-        android:defaultValue="true" />
-
     <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
         android:key="network_traffic_autohide_threshold"
         android:title="@string/network_traffic_autohide_threshold_title"
         android:max="10"
         settings:min="0"
-        settings:units="" />
+        settings:units="sec" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="network_traffic_arrow"
+        android:title="@string/network_traffic_arrow"
+        android:summary="@string/network_traffic_arrow_summary"
+        android:defaultValue="true" />
 </PreferenceScreen>
