DUTweaks: Team Dialog: Redesign
- Move to a bottom sheet dialog because that's the new shit :p
- Added animations that we have with screen record
- Added telegram and github links
- Added titles and github user names to developer sections
- Moved to a recyclerview style so we're not having to add individual layouts
- Updated pics for everyone on the team per Telegram avatars

Credit/Thanks to Neil Hainsworth for Twitter and Github svg's
https://www.iconfinder.com/iconsets/free-social-icons

Change-Id: Idea96f461b17bf7759e15d074b53d3085b5036d1

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -28,6 +28,9 @@
     <dimen name="card_margin_right">8dp</dimen>
     <dimen name="card_margin_left">8dp</dimen>
 
+    <!-- The Team -->
+    <dimen name="team_recycler_height">500dp</dimen>
+
     <!-- FOD icon picker -->
     <dimen name="fod_picker_item_margin">10dp</dimen>
     <dimen name="fod_picker_item_size">100dp</dimen>
