Allow a "L" back swipe to trigger more actions [2/2]

--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -128,6 +128,23 @@
                 android:targetClass="com.android.systemui.statusbar.phone.LeftBackSwipeCustomApp" />
         </Preference>
 
+        <ListPreference
+            android:key="left_vertical_swipe_actions"
+            android:title="@string/left_vertical_swipe_actions_title"
+            android:entries="@array/gestures_actions_entries"
+            android:entryValues="@array/gestures_actions_values"
+            android:defaultValue="0" />
+
+        <Preference
+            android:key="left_vertical_swipe_app_action"
+            android:title="@string/left_vertical_swipe_app_action_title"
+            android:summary="@string/app_picker_dialog_title"
+            android:dependency="force_show_navbar">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.statusbar.phone.LeftBackVerticalSwipeCustomApp" />
+        </Preference>
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -150,6 +167,23 @@
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.RightBackSwipeCustomApp" />
+        </Preference>
+
+        <ListPreference
+            android:key="right_vertical_swipe_actions"
+            android:title="@string/right_vertical_swipe_actions_title"
+            android:entries="@array/gestures_actions_entries"
+            android:entryValues="@array/gestures_actions_values"
+            android:defaultValue="0" />
+
+        <Preference
+            android:key="right_vertical_swipe_app_action"
+            android:title="@string/right_vertical_swipe_app_action_title"
+            android:summary="@string/app_picker_dialog_title"
+            android:dependency="force_show_navbar">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.statusbar.phone.RightBackVerticalSwipeCustomApp" />
         </Preference>
 
     </PreferenceCategory>
